modified styling to fix layout overflow

--- a/web/themes/custom/litteratursiden/sass/_content.scss
+++ b/web/themes/custom/litteratursiden/sass/_content.scss
@@ -193,7 +193,8 @@ table.sticky-header {
 
   .tns-outer {
     padding: 0 !important;
-    margin: 0px -27px 20px -17px;
+    // margin: 0px -27px 20px -17px; //changed due to layout overflow on mobile devices.
+    margin: 0;
   }
 
   .field--name-field-small-spots {
